--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -17,7 +17,7 @@
         </md-card-title>
 
         <md-card-content flex>
-        
+
             <md-content class="md-padding" flex>
 
                 <div layout="column" layout-wrap layout-align="space-around center" flex>
@@ -87,7 +87,7 @@
                 </div>
             </md-content>
         </md-card-content>
-        <md-card-actions layout="row" layout-align="end center">
+        <md-card-actions layout="row" layout-align="end center" class="footer-backend">
             <md-button disabled>Superpowered by Lightweight</md-button>
             <div flex></div>
             <md-button class="md-raised" ng-click="closeUserVault()" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Close</md-button>
