--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -129,8 +129,8 @@
 	.suite-dialog .lightweight-md-dropdown.normal md-select:not([disabled]):focus .md-select-value {border-bottom-color: rgba(0,0,0,0.12);}
 	@media screen and (min-width: 840px) {
 	    .suite-dialog > md-card-content {
-	        max-height: {{window_height - 86}}px!important; overflow-y: scroll;
-	        min-height: {{window_height - 106}}px!important; width: 100%; 
+	        max-height: {{window_height}}px!important; overflow-y: scroll;
+	        min-height: {{window_height}}px!important; width: 100%; 
 	        background-color: {{base_hue_lightest.value}}; margin: 0; z-index: 1; padding: 0!important;
 	    }
 	}
