--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -27,9 +27,9 @@
                 <span class="md-headline">Create A New Task</span>
             </md-card-title-text>
 
-            <span flex>
+            <span flex></span>
 
-            <md-button class="md-button" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeCreateTask(); clearForm(createTaskForm)" ng-confirm-condition="true">
+            <md-button class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeCreateTask(); clearForm(createTaskForm)" ng-confirm-condition="true">
                 <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
             </md-button>
             
