--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -14,6 +14,12 @@
                 <span class="md-headline">User Vault</span>
             </md-card-title-text>
 
+            <span flex></span>
+
+            <md-button style="background-color: {{base_hue_lighter.value}}" class="md-fab md-mini" aria-label="close the user vault" ng-click="closeUserVault()">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
+            </md-button>
+
         </md-card-title>
 
         <md-card-content flex>
