--- a/lib/client/app/application/global/dialogs/myVault.html
+++ b/lib/client/app/application/global/dialogs/myVault.html
@@ -80,6 +80,11 @@
                     </div>
                 </md-list-item>
             </md-card-title-text>
+            <span flex></span>
+
+            <md-button style="background-color: {{base_hue_lighter.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to leave?" ng-confirm-click="closeMyVault()" ng-confirm-condition="true">
+                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
+            </md-button>
         </md-card-title>
         <md-card-content flex>
             <md-content flex>
