backend header adjustments

--- a/lib/client/app/application/global/dialogs/userVaultAddUser.html
+++ b/lib/client/app/application/global/dialogs/userVaultAddUser.html
@@ -12,7 +12,7 @@
             </md-card-title-text>
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lighter.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new user?" ng-confirm-click="closeAddUser()" ng-confirm-condition="true">
+            <md-button style="background-color: {{base_hue_lightest.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new user?" ng-confirm-click="closeAddUser()" ng-confirm-condition="true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
             </md-button>
         </md-card-title>
