--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -16,7 +16,7 @@
 
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}" class="md-fab md-mini" aria-label="close the user vault" ng-click="closeUserVault()">
+            <md-button style="background-color: {{base_hue_lightest.value}}!important;" class="md-fab md-mini" aria-label="close the user vault" ng-click="closeUserVault()">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
             </md-button>
 
