--- a/lib/client/app/application/global/dialogs/editor.html
+++ b/lib/client/app/application/global/dialogs/editor.html
@@ -151,11 +151,11 @@
 
             <span flex></span>
             
-            <md-button ng-confirm-message="Are you sure you want to save your changes?" ng-confirm-click="updateApp(editor_element)" ng-confirm-condition="true" class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{base_hue_lightest.value}};">
+            <md-button ng-confirm-message="Are you sure you want to save your changes?" ng-confirm-click="updateApp(editor_element)" ng-confirm-condition="true" class="md-raised" style="background-color: {{base_hue_lightest.value}}; color: {{base_hue_lightest.value}}!important;">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">done</md-icon>
             </md-button>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel editing?" ng-confirm-click="end_edit()" ng-confirm-condition="true">
+            <md-button style="background-color: {{base_hue_lightest.value}}!important;" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel editing?" ng-confirm-click="end_edit()" ng-confirm-condition="true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
             </md-button>
 
