--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -6,7 +6,7 @@
             </md-card-title-text>
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">
+            <md-button style="background-color: {{base_hue_lightest.value}}!important;" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
             </md-button>
         </md-card-title>
