--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -1,9 +1,11 @@
 <div class="tertiary-dialog-curtain mediaVault" ng-show="media_vault_visible == true" ng-controller="lightweightController">
+
     <md-card class="suite-dialog md-card-base card inputs" ng-init="view_media = true; view_tags = false; view_upload = false">
-        <md-card-title>
 
+        <!-- =================== App Header =================== -->
+        <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
 
-            <!-- Action Buttons -->
+            <!-- =================== Action Buttons =================== -->
             <md-button class="md-fab md-mini" aria-label="View Media Vault" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = true; view_tags = false; view_upload = false">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">perm_media</md-icon>
             </md-button>
@@ -13,25 +15,25 @@
             <md-button class="md-fab md-mini" aria-label="Upload Media" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = false; view_tags = false; view_upload = true">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">cloud_upload</md-icon>
             </md-button>
-            <!-- Action Buttons -->
+            <!-- =================== Action Buttons =================== -->
 
-
+            <!-- =================== App Title =================== -->
             <md-card-title-text>
                 <span class="md-headline">Media Vault</span>
             </md-card-title-text>
+            <!-- =================== App Title =================== -->
 
             <span flex></span>
 
-            
-                <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">close</md-icon>
+            <!-- =================== Additional App Action Buttons =================== -->
+            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">close</md-icon>
+            <!-- =================== Additional App Action Buttons =================== -->
             
         </md-card-title>
-
+        <!-- =================== App Header =================== -->
 
 
         <md-card-content flex>
-
-
 
             <!-- ======================== Begin view - Manage Media ======================== -->
             <!-- ======================== Begin view - Manage Media ======================== -->
