--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -12,15 +12,11 @@
 
 
 
-
-
-
-<!-- Backend Dialog Boilerplate -->
-
 <div class="secondary-dialog-curtain taskrunner" ng-show="task_runner_task_add_visible == true" ng-controller="lightweightController">
 
     <md-card class="suite-dialog md-card-base card inputs">
 
+        <!-- =================== App Header =================== -->
         <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
 
             <md-card-title-text>
@@ -29,11 +25,10 @@
 
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeCreateTask(); clearForm(createTaskForm)" ng-confirm-condition="true">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
-            </md-button>
+            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel adding a new task?" ng-confirm-click="closeCreateTask(); clearForm(createTaskForm)" ng-confirm-condition="true">close</md-icon>
             
         </md-card-title>
+        <!-- =================== App Header =================== -->
 
         <md-card-content flex>
 
@@ -42,11 +37,6 @@
                 <div layout="column" layout-align="center center" layout-margin flex>
 
                     <div style="width: 100%" layout="row" layout-align="center start" flex>
-
-<!-- Backend Dialog Boilerplate -->
-
-
-
 
                         <form name="createTaskForm" ng-init="part_one = true; part_two = false; part_three = false" style="width: 100%" layout="row" layout-align="center start" flex>
                             
