--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -1,5 +1,3 @@
-<!-- Backend Dialog Boilerplate -->
-
 <div class="dialog-curtain userVault" ng-show="user_vault_visible == true" ng-controller="lightweightController">
     
     <md-card class="suite-dialog md-card-base card inputs">
@@ -16,9 +14,8 @@
 
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}!important;" class="md-fab md-mini" aria-label="close the user vault" ng-click="closeUserVault()">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
-            </md-button>
+            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-click="closeUserVault()">close</md-icon>
+
 
         </md-card-title>
 
@@ -29,8 +26,6 @@
                 <div layout="column" layout-wrap layout-align="space-around center" flex>
 
                     <div layout="column" layout-gt-sm="row" layout-align="center start" layout-align-gt-sm="start center" layout-margin flex="100" style="width: 100%">
-
-<!-- Backend Dialog Boilerplate -->
 
                         <div layout="row" layout-align="start center">
                             <md-button ng-disabled="currentUserPage == 0" ng-click="currentUserPage = 0" class="md-icon-button" aria-label="Clear Media Search">
