--- a/lib/client/app/application/global/dialogs/userVaultDetail.html
+++ b/lib/client/app/application/global/dialogs/userVaultDetail.html
@@ -1,25 +1,38 @@
+<!-- View Styles -->
+
 <style>
     md-list-item md-input-container {width: 100%;}
     .md-default-theme .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-default-theme .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator, .md-calendar-date.md-focus.md-calendar-selected-date .md-calendar-date-selection-indicator {background: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-datepicker-open .md-datepicker-calendar-icon, .md-datepicker-open .md-datepicker-calendar-icon {color: {{primary_hue_normal.value}}!important;}
     .md-default-theme .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator, .md-calendar-date.md-calendar-date-today .md-calendar-date-selection-indicator {border: 1px solid {{primary_hue_normal.value}};}
 </style>
+
+<!-- View Styles -->
+
+
 <div class="secondary-dialog-curtain userVault" ng-show="user_vault_detail_visible == true" ng-controller="lightweightController">
     <md-card class="suite-dialog md-card-base card inputs">
+        
         <md-card-title>
+
             <md-card-title-text>
                 <span class="md-headline">{{selectedUser.firstname || selectedUser.email}} {{selectedUser.lastname}}</span>
             </md-card-title-text>
+            
             <span flex></span>
 
-            <md-button style="background-color: {{base_hue_lightest.value}}!important;" class="md-fab md-mini" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to cancel editing this user?" ng-confirm-click="closeUserVaultDetail()" ng-confirm-condition="true">
-                <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">close</md-icon>
-            </md-button>
+            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel editing this user?" ng-confirm-click="closeUserVaultDetail()" ng-confirm-condition="true">close</md-icon>
+
         </md-card-title>
+
         <md-card-content flex>
+
             <md-content class="md-padding" flex>
+
                 <div layout="column" layout-align="center center" layout-margin flex>
+
                     <div style="width: 100%" layout="row" layout-align="center center" flex>
+
                         <md-card class="md-whiteframe-4dp" style="background: #fafafa;" flex flex-gt-sm="40">
                             <form name="userVaultDetail">
                                 <md-card-content>
@@ -103,14 +116,19 @@
                                 </md-card-actions>
                             </form>
                         </md-card>
+
                     </div>
+
                 </div>
+
             </md-content>
+
         </md-card-content>
-        <md-card-actions layout="row" layout-align="end center" class="footer-backend">
+
+        <!-- <md-card-actions layout="row" layout-align="end center" class="footer-backend">
             <md-button disabled>Superpowered by Lightweight</md-button>
             <div flex></div>
             <md-button class="md-raised" ng-click="closeUserVaultDetail()" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Close</md-button>
-        </md-card-actions>
+        </md-card-actions> -->
     </md-card>
 </div>
