--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -19,9 +19,11 @@
         <!-- =================== App Header =================== -->
         <md-card-title style="position: relative;" layout="column" layout-align="start center" layout-gt-sm="row" layout-align-gt-sm="center center">
 
+            <!-- =================== App Title =================== -->
             <md-card-title-text>
                 <span class="md-headline">Create A New Task</span>
             </md-card-title-text>
+            <!-- =================== App Title =================== -->
 
             <span flex></span>
 
