my vault adjustments, media vault view fix

--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -9,7 +9,7 @@
             <md-button class="md-fab md-mini" aria-label="View Media Vault" style="position: absolute; bottom: -26px; left: 16px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = true; view_tags = false; view_upload = false">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">perm_media</md-icon>
             </md-button>
-            <md-button class="md-fab md-mini" aria-label="Manage Image Tags" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = false; view_tags = true; view_upload = true">
+            <md-button class="md-fab md-mini" aria-label="Manage Image Tags" style="position: absolute; bottom: -26px; left: 72px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = false; view_tags = true; view_upload = false">
                 <md-icon style="color: {{primary_hue_normal.value}}; cursor: pointer;" aria-label="Remove List Item" md-font-library="material-icons">style</md-icon>
             </md-button>
             <md-button class="md-fab md-mini" aria-label="Upload Media" style="position: absolute; bottom: -26px; left: 128px; background-color: {{base_hue_lightest.value}}!important;" ng-click="view_media = false; view_tags = false; view_upload = true">
