--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -14,6 +14,9 @@
 
 <div class="secondary-dialog-curtain taskrunner" ng-show="task_runner_task_add_visible == true" ng-controller="lightweightController">
 
+    <div class="backend sidebar">
+    </div>
+
     <md-card class="suite-dialog md-card-base card inputs">
 
         <!-- =================== App Header =================== -->
