--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -106,7 +106,7 @@
 	/* md-cards */
 	/*.suite-dialog > md-card-title {background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; box-shadow: 0 1px 3px 0 rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 2px 1px -1px rgba(0,0,0,.12); z-index: 2;}*/
 
-	.suite-dialog > md-card-title {background-color: {{base_hue_lightest.value}}; color: {{base_hue_darker.value}};  z-index: 2;}
+	.suite-dialog > md-card-title {background-color: {{base_hue_lightest.value}}; color: {{base_hue_darker.value}};  z-index: 2; border-bottom: 1px solid rgba(0,0,0,.15);}
 	
 	.suite-dialog > md-card-title md-input-container md-select:not([disabled]):focus .md-select-value,
 	md-select.md-default-theme .md-select-icon, 
