--- a/lib/client/app/application/global/dialogs/tasks.html
+++ b/lib/client/app/application/global/dialogs/tasks.html
@@ -21,7 +21,7 @@
 
             <span flex></span>
 
-            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to exit Task Runner?" ng-confirm-click="closeTaskRunner()" ng-confirm-condition="true">close</md-icon>
+            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to exit Task Runner?" ng-confirm-click="closeTaskRunner()" ng-confirm-condition="true">close</md-icon>
 
             
         </md-card-title>
@@ -80,7 +80,7 @@
                     </md-card-content>
                 </md-card>
             </div>
-            
+
             <div flex="100" flex-gt-sm="40" layout-align="row" layout-wrap>
                 <md-card class="md-card-base" style="background: #fafafa; border: 1px solid rgba(33,33,33,.15);" flex="100">
                         <md-card-header>
