--- a/lib/client/app/application/global/dialogs/mediaVault.html
+++ b/lib/client/app/application/global/dialogs/mediaVault.html
@@ -26,7 +26,7 @@
             <span flex></span>
 
             <!-- =================== Additional App Action Buttons =================== -->
-            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">close</md-icon>
+            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" aria-label="cancel new task creation" ng-confirm-message="Are you sure you want to exit Media Vault?" ng-confirm-click="closeMediaVault()" ng-confirm-condition="true">close</md-icon>
             <!-- =================== Additional App Action Buttons =================== -->
             
         </md-card-title>
