--- a/lib/client/app/application/global/dialogs/userVault.html
+++ b/lib/client/app/application/global/dialogs/userVault.html
@@ -14,7 +14,7 @@
 
             <span flex></span>
 
-            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-click="closeUserVault()">close</md-icon>
+            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-click="closeUserVault()">close</md-icon>
 
 
         </md-card-title>
