--- a/lib/client/app/application/global/dialogs/userVaultAddUser.html
+++ b/lib/client/app/application/global/dialogs/userVaultAddUser.html
@@ -22,7 +22,7 @@
             
             <span flex></span>
 
-            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel adding a new user?" ng-confirm-click="closeAddUser()" ng-confirm-condition="true">close</md-icon>
+            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel adding a new user?" ng-confirm-click="closeAddUser()" ng-confirm-condition="true">close</md-icon>
 
         </md-card-title>
 
