--- a/lib/client/app/application/global/dialogs/userVaultDetail.html
+++ b/lib/client/app/application/global/dialogs/userVaultDetail.html
@@ -21,7 +21,7 @@
             
             <span flex></span>
 
-            <md-icon style="color: {{base_hue_lightest.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel editing this user?" ng-confirm-click="closeUserVaultDetail()" ng-confirm-condition="true">close</md-icon>
+            <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons" ng-confirm-message="Are you sure you want to cancel editing this user?" ng-confirm-click="closeUserVaultDetail()" ng-confirm-condition="true">close</md-icon>
 
         </md-card-title>
 
