--- a/lib/client/app/application/global/style.html
+++ b/lib/client/app/application/global/style.html
@@ -137,7 +137,7 @@
 	    }
 	    .suite-dialog .backend.sidebar {
 	    	height: {{window_height - 84}}px!important; width: 300px; position: absolute; top: 84px; left: 0; 
-	        background-color: {{base_hue_lightest.value}}; margin: 0; z-index: 1; padding: 0!important; overflow-y: scroll; border-right: 1px solid rgba(0,0,0,.15);
+	        background-color: {{base_hue_lightest.value}}; margin: 0; z-index: 20; padding: 0!important; overflow-y: auto;
 	    }
 	}
 	@media screen and (max-width: 839px) {
