--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -18,13 +18,13 @@
 
     <md-card class="suite-dialog md-card-base card inputs">
 
-        <div class="backend sidebar" layout="row" layout-alight="center start" layout-wrap>
-            <span flex="100" layout="row">
+        <div class="backend sidebar" layout="column" layout-alight="center start" layout-wrap>
+            <md-list-item>
                 <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer;" aria-label="Remove Task" md-font-library="material-icons">face</md-icon>&nbsp;&nbsp;{{me.firstname}} {{me.lastname}}
-            </span>
-            <span>
+            </md-list-item>
+            <md-list-item>
                 <md-button ng-confirm-message="Are you sure you want to sign out?" ng-confirm-click="auth.$signOut()" ng-confirm-condition="true" class="md-raised" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}};">Sign Out</md-button>
-            </span>
+            </md-list-item>
         </div>
 
         <!-- =================== App Header =================== -->
