--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -18,7 +18,7 @@
 
     <md-card class="suite-dialog md-card-base card inputs">
 
-        <div class="backend sidebar" ng-class="{'open': sidebarOpen, 'closed': !sidebarOpen}" layout="row" layout-alight="center start" layout-wrap>
+        <div class="backend sidebar" ng-class="{'open': sidebarOpen, 'closed': !sidebarOpen}" layout="row" layout-align="center start" layout-wrap>
             <span style="height:48px; width: 100%;" flex="100"></span>
             <md-list-item class="avatar" flex="100">
                 <md-icon style="color: {{base_hue_darker.value}}; cursor: pointer; font-size: 36px; width: 36px; height: 36px;" aria-label="Remove Task" md-font-library="material-icons">face</md-icon>
