--- a/lib/client/app/application/global/dialogs/tasksAddTask.html
+++ b/lib/client/app/application/global/dialogs/tasksAddTask.html
@@ -25,8 +25,8 @@
                 <span style="color: {{base_hue_darkest.value}}; font-size: 18px;">{{me.firstname}} {{me.lastname}}</span>
             </md-list-item>
             <md-list-item class="menu button" flex="100">
-                <md-button ng-confirm-message="Are you sure you want to sign out?" ng-confirm-click="auth.$signOut()" ng-confirm-condition="true" class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 80%;">
-                <md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">lock_open</md-icon>&nbsp;&nbsp;Sign Out
+                <md-button ng-confirm-message="Are you sure you want to sign out?" ng-confirm-click="auth.$signOut()" ng-confirm-condition="true" class="md-raised lightweight-round" style="background-color: {{primary_hue_normal.value}}; color: {{base_hue_lightest.value}}; width: 100%;">
+                <md-icon style="color: {{base_hue_lightest.value}};" aria-label="Remove Task" md-font-library="material-icons">lock_open</md-icon>&nbsp;&nbsp;&nbsp;Sign Out
                 </md-button>
             </md-list-item>
         </div>
